Eevee DOF with "Jitter Camera" broken #85959

Closed
opened 2021-02-24 17:58:41 +01:00 by Steffen Dünner · 14 comments

System Information
Operating system: Linux-5.8.0-44-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 16:10, hash: b0b33b77fa
Worked: blender-2.93.0-8d50a3e19e02-linux64
Caused by bb2af40ec7

Short description of error
DOF when using "Jitter Camera" in Eevee is completely blurred in the latest master. The whole frame gets blurred independent from the focus point.

Exact steps for others to reproduce the error

  • Open attached blend file:
    Eevee_DOF_v01.blend
  • Activate a preview render or press F12 to render a frame. This is the result in the latest master:
    Master.png
  • In the current Build Bot build (version see above) it looks like it should:
    Latest_Buildbot.png
**System Information** Operating system: Linux-5.8.0-44-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 16:10, hash: `b0b33b77fa` Worked: blender-2.93.0-8d50a3e19e02-linux64 Caused by bb2af40ec7 **Short description of error** DOF when using "Jitter Camera" in Eevee is completely blurred in the latest master. The whole frame gets blurred independent from the focus point. **Exact steps for others to reproduce the error** - Open attached blend file: [Eevee_DOF_v01.blend](https://archive.blender.org/developer/F9835360/Eevee_DOF_v01.blend) - Activate a preview render or press F12 to render a frame. This is the result in the latest master: ![Master.png](https://archive.blender.org/developer/F9835364/Master.png) - In the current Build Bot build (version see above) it looks like it should: ![Latest_Buildbot.png](https://archive.blender.org/developer/F9835372/Latest_Buildbot.png)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

#86088 was marked as duplicate of this issue

#86088 was marked as duplicate of this issue

Added subscriber: @Gurra

Added subscriber: @Gurra

I downloaded the latest 2.93 alpha release today (b2c7ea6d82) and it works as intended for me.

I downloaded the latest 2.93 alpha release today (b2c7ea6d82c4) and it works as intended for me.

Yes, the build you're testing is older than the release from the Build Bot I mentioned as the last working build. So I would expect that to work as well, as the bug seems to have creeped in at a later time (most likely here I suspect https://developer.blender.org/rBbb2af40ec7dd9a0c41991bc2faaf6eb3f0618016 ). If you're not compiling Blender yourself, you might have to wait a few hours until an updated build is available for download.

Yes, the build you're testing is older than the release from the Build Bot I mentioned as the last working build. So I would expect that to work as well, as the bug seems to have creeped in at a later time (most likely here I suspect https://developer.blender.org/rBbb2af40ec7dd9a0c41991bc2faaf6eb3f0618016 ). If you're not compiling Blender yourself, you might have to wait a few hours until an updated build is available for download.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Indeed caused by bb2af40ec7

Indeed caused by bb2af40ec7
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

CC @fclem

CC @fclem

This issue was referenced by 400f2e4be6

This issue was referenced by 400f2e4be67b8db1b85cacdcc21ca4c2d7bda2b3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-02-25 15:27:31 +01:00
Member

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85959
No description provided.