Fix T85959 EEVEE: DOF with "Jitter Camera" broken

Was caused by recent changes in window_translate_m4 by rBbb2af40ec7dd.